chore: document GetAllAgencies
